# scrapper-rf-cnpj

./: .env.template  .gitignore  Dockerfile  Makefile  README.md  REFACTORING_PLAN.md  alembic.ini  docker-compose.yaml  justfile  logger_config.ini  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
alembic/: env.py
alembic/versions/: 6b3261cb1013_change_audi_file_size_bytes_to_.py
benchmarks/: README.md  __init__.py  analysis.py  analyze_results.py  base.py  config.py  conversion_benchmark.py  duckdb_benchmark.py  duckdb_enhanced.py  enhanced_runner.py  loading_benchmark.py  monitoring.py  orchestrator.py  parallel.py  polars_benchmark.py  polars_enhanced.py  quick_benchmark.py  quick_conversion_benchmark.py  run_benchmarks.py  utils.py
docs/: AUDIT_SCHEMA_UNIFORMALIZATION_REPORT.md  DOCUMENTATION_COVERAGE_ANALYSIS.md  ENVIRONMENT_VARIABLES.md  ENV_QUICK_REFERENCE.md  NUCLEAR_MIGRATION_FINAL.md  NUCLEAR_MIGRATION_SUCCESS.md  audit_service_transformation_summary.md  benchmark_enhancement_completion_report.md  benchmark_refactor.md  loading_service_refactoring_plan.md  milestone_b_completion_report.md  milestone_c_completion_report.md
docs/hierarchy_context_persistence/: architecture_discovery_log.md  cascaded_context_implementation_example.md  cascaded_context_managers_analysis.md  configuration_and_development_analysis.md  documentation_relevance_assessment.md  fileloader_integration_strategy.md  hierarchy_test_analysis.md  implementation_summary.md
examples/: README.md  discovery_example.py  etl_config_usage.py  etl_integration_demo.py  loading_example.py  parquet_loading_example.py
lab/: LEGACY_CODE_CLEANUP.md  QUICK_REFERENCE_batch_system.md  README.md  README_batch_system.md  batch_subbatch_manifest_analysis.md  head_parquet.py  main.ipynb  parquet_conversion.py  parquet_to_postgres.py  pk_candidate_evaluator.py  sink_into_duckdb.py  test_audit_integration.py  test_corrected_batch_hierarchy.py  test_files_row_integrity.py  upsert_csv_example.py  upsert_parquet_example.py  validate_batch_implementation.py
lab/refactored_fileloader/: .coveragerc  FILE_GENERATOR_FIX.md  PARALLEL_UPSERT_ANALYSIS.md  README.md  REFACTORING_PLAN.md  fix_legacy_tests.py  refactor_plan.md  requirements.txt  test_simple_debug.py
reports/: quality_report.md
scripts/: clean_packages.py  get-pip.py  quality_report.py  run_smart_conversion.py  validate_env.py
src/: config.py  constants.py  convert_cli.py  convert_parquet.py  main.ipynb  main.py  requirements_.txt
src/core/: constants.py  etl.py  interfaces.py  orchestrator.py  pipeline.py  schemas.py  schemas.py.backup  strategies.py  transforms.py
src/database/: db_admin.py  dml.py  dml_duckdb.py  engine.py  enhanced_loader.py  ingestion.py  models.py  schemas.py  service.py  utils.py
src/setup/: base.py  config.py  logging.py
src/utils/: conversion.py  dataframe.py  docker.py  file_detection.py  file_processing.py  logging.py  memory.py  (+3 more)
tests/: README.md  test_audit_service.py  test_blob_filtering.py  test_conversion_helpers.py  test_etl.py  test_loading_components.py
(+119 files in other folders)
