[project]
name = "scrapper-rf-cnpj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.30.0",
    "beautifulsoup4>=4.13.4",
    "lxml>=6.0.1",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "polars>=1.32.3",
    "psutil>=7.0.0",
    "psycopg2_binary>=2.9.10",
    "pyarrow>=20.0.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "python_json_logger>=3.3.0",
    "pytz==2024.1",
    "requests>=2.32.5",
    "rich>=14.1.0",
    "SQLAlchemy>=2.0.43",
    "sqlalchemy_utils>=0.41.2",
    "tenacity>=8.5.0",
    "tqdm>=4.67.1",
    "urllib3>=2.5.0",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.1.0",
    "radon>=6.0.1",
]

[tool.ruff]
lint.select = [
    "F",    # Pyflakes: unused imports, unused variables, etc.
    "ARG",  # flake8-unused-arguments: unused function arguments
]

# Optional: if you only want warnings for unused functions/args
lint.ignore = []




